# openvr

./: .gitignore  CMakeLists.txt  README  README.md  build_openvr.bat  package.json
samples/: CMakeLists.txt  README.md  samples_vs2010.sln  samples_vs2017.sln
samples/driver_sample/: CMakeLists.txt  driver_sample.cpp  driver_sample.sln  driver_sample.vcxproj  driverlog.cpp  driverlog.h  message.pb.cc  message.pb.h  message.proto
samples/drivers/: CMakeLists.txt  README.md  vs-openvr_samples.sln
samples/drivers/drivers/: CMakeLists.txt  README.md
samples/drivers/drivers/barebones/: CMakeLists.txt  README.md  barebones.vcxproj
samples/drivers/drivers/barebones/barebones/: driver.vrdrivermanifest
samples/drivers/drivers/barebones/src/: device_provider.cpp  device_provider.h  hmd_driver_factory.cpp
samples/drivers/drivers/handskeletonsimulation/: CMakeLists.txt  README.md  handskeletonsimulation.vcxproj
samples/drivers/drivers/handskeletonsimulation/handskeletonsimulation/: driver.vrdrivermanifest
samples/drivers/drivers/handskeletonsimulation/src/: controller_device_driver.cpp  controller_device_driver.h  device_provider.cpp  device_provider.h  hand_simulation.cpp  hand_simulation.h
samples/drivers/drivers/simplecontroller/: CMakeLists.txt  README.md  simplecontroller.vcxproj
samples/drivers/drivers/simplecontroller/simplecontroller/: driver.vrdrivermanifest
samples/drivers/drivers/simplecontroller/src/: controller_device_driver.cpp  controller_device_driver.h  device_provider.cpp
samples/drivers/drivers/simplehmd/: CMakeLists.txt  README.md  simplehmd.vcxproj
samples/drivers/drivers/simplehmd/simplehmd/: driver.vrdrivermanifest
samples/drivers/drivers/simplehmd/src/: device_provider.cpp  device_provider.h  hmd_device_driver.cpp  hmd_device_driver.h
samples/drivers/drivers/simpletrackers/: CMakeLists.txt  README.md  simpletrackers.vcxproj
samples/drivers/drivers/simpletrackers/simpletrackers/: driver.vrdrivermanifest
samples/drivers/drivers/simpletrackers/src/: device_provider.cpp  device_provider.h  hmd_driver_factory.cpp  tracker_device_driver.cpp  tracker_device_driver.h
samples/drivers/drivers/tutorial/: CMakeLists.txt  README.md  sample.vcxproj  vs-sample.sln
samples/drivers/drivers/tutorial/sample/: driver.vrdrivermanifest
samples/drivers/drivers/tutorial/src/: controller_device.cpp  controller_device.h  device_provider.cpp  device_provider.h  hmd_driver_factory.cpp
samples/drivers/utils/: CMakeLists.txt  README.md
samples/drivers/utils/driverlog/: CMakeLists.txt  driverlog.cpp  driverlog.h  util_driverlog.vcxproj
samples/drivers/utils/vrmath/: CMakeLists.txt  util_vrmath.vcxproj  vrmath.h
samples/hellovr_dx12/: d3dx12.h  hellovr_dx12.vcxproj  hellovr_dx12.vcxproj.filters  hellovr_dx12_main.cpp
samples/hellovr_opengl/: CMakeLists.txt  hellovr_opengl.vcxproj  hellovr_opengl.vcxproj.filters  hellovr_opengl_main.cpp  hellovr_opengl_main.mm
samples/hellovr_opengl/hellovr_opengl.xcodeproj/: project.pbxproj
samples/hellovr_opengl/hellovr_opengl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/hellovr_vulkan/: CMakeLists.txt  hellovr_vulkan_main.cpp
samples/hellovr_vulkan/osx/: SDL_cocoametalview.h  SDL_cocoametalview.m
samples/helloworldoverlay/: CMakeLists.txt  helloworldoverlay.pro  main.cpp  openvroverlaycontroller.cpp  openvroverlaycontroller.h  overlaywidget.h
samples/hmd_opencv_sandbox/: camera_app.cpp  camera_app.h  chew.c  chew.h  chewtypes.h  common_hello.cpp  common_hello.h  geometry_object.cpp  geometry_object.h  hmd_opencv_sandbox.cpp  hmd_opencv_sandbox.h  opencv_process.cpp  opencv_process.h  os_generic.h  shader_file.cpp  shader_file.h  stb_image.h  vlinterm.c  vlinterm.h  vrterminal.cpp  vrterminal.h
samples/shared/: Matrices.cpp  Matrices.h  Vectors.h  compat.h  lodepng.cpp  osxfilebridge.h  osxfilebridge.mm  pathtools.cpp  pathtools.h  strtools.cpp
samples/tracked_camera_openvr_sample/: CMakeLists.txt  main.cpp  tracked_camera_openvr_sample.cpp  tracked_camera_openvr_sample.h  tracked_camera_openvr_sample.pro
samples/unity_keyboard_sample/Assets/: Ground.mat  KeyboardSample.cs  KeyboardSample.unity  PanelMat.mat  UIClicker.cs
samples/unity_keyboard_sample/Assets/Plugins/: openvr_api.cs
samples/unity_keyboard_sample/Assets/SteamVR/: readme.txt
samples/unity_keyboard_sample/Assets/SteamVR/Editor/: SteamVR_Editor.cs  SteamVR_Settings.cs  SteamVR_SkyboxEditor.cs  SteamVR_Update.cs
samples/unity_keyboard_sample/Assets/SteamVR/Extras/: SteamVR_LaserPointer.cs  (+3 more)
samples/unity_keyboard_sample/ProjectSettings/: AudioManager.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  UnityAdsSettings.asset
samples/unity_teleport_sample/Assets/: New Terrain.asset  unity_teleport_sample.unity
samples/unity_teleport_sample/Assets/Materials/: Ground.mat  SampleObjects.mat
samples/unity_teleport_sample/Assets/Plugins/: openvr_api.cs
samples/unity_teleport_sample/ProjectSettings/: ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset  TimeManager.asset  UnityConnectSettings.asset
src/: CMakeLists.txt  OpenVRConfig.cmake  README  ivrclientcore.h  jsoncpp.cpp  openvr.pc.in  openvr_api_public.cpp
src/json/: json.h
src/vrcommon/: dirtools_public.cpp  envvartools_public.cpp  envvartools_public.h  hmderrors.h  hmderrors_public.cpp  pathtools_public.cpp  pathtools_public.h  sharedlibtools_public.cpp  sharedlibtools_public.h  strtools.h  strtools_public.cpp  strtools_public.h  vrpathregistry.h  vrpathregistry_public.cpp  vrpathregistry_public.h
src/vrcore/: dirtools_public.cpp  dirtools_public.h  envvartools_public.cpp  envvartools_public.h  hmderrors_public.cpp  pathtools_public.cpp  pathtools_public.h  sharedlibtools_public.cpp  sharedlibtools_public.h  strtools_public.cpp  strtools_public.h  vrpathregistry_public.cpp  vrpathregistry_public.h
(+140 files in other folders)
